--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -15,6 +15,8 @@ rules:
   semi:
   - error
   - never
+  eqeqeq: error
+  no-undef: error
   "@typescript-eslint/no-unused-vars": error
   vue/no-multiple-template-root: 'off'
   quotes:
@@ -36,3 +38,8 @@ overrides:
   - "*.vue"
   rules:
     indent: 'off'
+ignorePatterns: 
+- node_modules
+- build
+- dist
+- public
