--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
     "vue": "^3.3.8",
+    "vue-router": "4",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
